--- a/.github/workflows/ciworkflow.yml
+++ b/.github/workflows/ciworkflow.yml
@@ -19,15 +19,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    * name: Check out repository
+    - name: Check out repository
       uses: actions/checkout@v2
     # Use Node.js
-    * name: Set up Node
+    - name: Set up Node
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
     # Runs markdownlint
-    * name: Run markdown linter
+    - name: Run markdown linter
       run: |
         npm i -g markdownlint-cli
         markdownlint "content/en/**/*.md"      
